--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -849,10 +849,17 @@ div.input-prepend
 
 //**********************************END OF SHOW PAGE*************************************************
 //####################################################################################################
+.search_bike_table 
+{
+	position: relative;
+	padding: 10px;
+}
 .result_table 
 {
 	width: 100%;
 	position: relative;
+	margin-bottom: 45px;
+	margin-top: 15px;
 	//border-bottom: solid 1px grey;
 }
 
@@ -872,9 +879,9 @@ div.search_result_div a
 		max-height: 220px;
 	}
 }
-td.view_bike_link{
+.view_bike_link
+{
 	position: absolute;
-	bottom: 0%;
 	right: 10%;
 }
 .result_header
@@ -924,7 +931,7 @@ td.view_bike_link{
 		}
 	}
 }
-td.listing_title 
+.listing_title 
 {
 	font-size: 18px;
 	width: 55%;
