--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -32,7 +32,8 @@ body
 //
 // Example:
 // @linkColor: #ff0000;
-.legen {
+.legen 
+{
   display: block;
   width: 100%;
   padding: 0;
@@ -913,6 +914,7 @@ div.search_result_div a
 			padding-left: 15px;
 			border-top-left-radius: 15px;
 			border-bottom-right-radius: 15px;
+			margin-top: -20px;
 		}
 }
 @media(max-width: 420px)
@@ -1392,6 +1394,7 @@ a#logo_link:hover
 	background: white;
 	margin-top: 10px;
 	padding: 15px;
+	margin-bottom: 20px;
 }
 .showroom_header 
 {
